--- a/mysql-deployment.yml
+++ b/mysql-deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: mysql
-          image: mysql:latest
+          image: mysql:5.7
           env:
             - name: MYSQL_ROOT_PASSWORD
               value: "admin"
