--- a/mysql-deployment.yml
+++ b/mysql-deployment.yml
@@ -14,6 +14,13 @@ spec:
       labels:
         app: mysql
     spec:
+      initContainers:
+        - name: init-mysql
+          image: busybox
+          command: ['sh', '-c', 'rm -rf /var/lib/mysql/*']
+          volumeMounts:
+            - name: mysqldata
+              mountPath: /var/lib/mysql
       containers:
         - name: mysql
           image: mysql:5.7
